--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="heading">next career?</div>
       </div>
       <div class="hero__logo">
-        <div class="logo">Live Vision</div>
+        <div class="logo">Career Craft</div>
       </div>
     </div>
     <div data-w-id="228a166f-154e-dd38-6a53-792b479fb70a" class="subhero">
